Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/UWorld.h

	DOTNET_EXPORT auto E_PROP_UWorld_AudioTimeSeconds_GET(UWorld* Ptr) { return Ptr->AudioTimeSeconds; }
	DOTNET_EXPORT void E_PROP_UWorld_AudioTimeSeconds_SET(UWorld* Ptr, float Value) { Ptr->AudioTimeSeconds = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bActorsInitialized_GET(UWorld* Ptr) { return Ptr->bActorsInitialized; }
	DOTNET_EXPORT void E_PROP_UWorld_bActorsInitialized_SET(UWorld* Ptr, uint8 Value) { Ptr->bActorsInitialized = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bAggressiveLOD_GET(UWorld* Ptr) { return Ptr->bAggressiveLOD; }
	DOTNET_EXPORT void E_PROP_UWorld_bAggressiveLOD_SET(UWorld* Ptr, uint8 Value) { Ptr->bAggressiveLOD = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bAllowAudioPlayback_GET(UWorld* Ptr) { return Ptr->bAllowAudioPlayback; }
	DOTNET_EXPORT void E_PROP_UWorld_bAllowAudioPlayback_SET(UWorld* Ptr, uint8 Value) { Ptr->bAllowAudioPlayback = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bAreConstraintsDirty_GET(UWorld* Ptr) { return Ptr->bAreConstraintsDirty; }
	DOTNET_EXPORT void E_PROP_UWorld_bAreConstraintsDirty_SET(UWorld* Ptr, uint8 Value) { Ptr->bAreConstraintsDirty = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bBegunPlay_GET(UWorld* Ptr) { return Ptr->bBegunPlay; }
	DOTNET_EXPORT void E_PROP_UWorld_bBegunPlay_SET(UWorld* Ptr, uint8 Value) { Ptr->bBegunPlay = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bCreateRenderStateForHiddenComponents_GET(UWorld* Ptr) { return Ptr->bCreateRenderStateForHiddenComponents; }
	DOTNET_EXPORT void E_PROP_UWorld_bCreateRenderStateForHiddenComponents_SET(UWorld* Ptr, uint8 Value) { Ptr->bCreateRenderStateForHiddenComponents = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bDebugDrawAllTraceTags_GET(UWorld* Ptr) { return Ptr->bDebugDrawAllTraceTags; }
	DOTNET_EXPORT void E_PROP_UWorld_bDebugDrawAllTraceTags_SET(UWorld* Ptr, bool Value) { Ptr->bDebugDrawAllTraceTags = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bDebugPauseExecution_GET(UWorld* Ptr) { return Ptr->bDebugPauseExecution; }
	DOTNET_EXPORT void E_PROP_UWorld_bDebugPauseExecution_SET(UWorld* Ptr, uint8 Value) { Ptr->bDebugPauseExecution = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bDoDelayedUpdateCullDistanceVolumes_GET(UWorld* Ptr) { return Ptr->bDoDelayedUpdateCullDistanceVolumes; }
	DOTNET_EXPORT void E_PROP_UWorld_bDoDelayedUpdateCullDistanceVolumes_SET(UWorld* Ptr, uint8 Value) { Ptr->bDoDelayedUpdateCullDistanceVolumes = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bDropDetail_GET(UWorld* Ptr) { return Ptr->bDropDetail; }
	DOTNET_EXPORT void E_PROP_UWorld_bDropDetail_SET(UWorld* Ptr, uint8 Value) { Ptr->bDropDetail = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bInTick_GET(UWorld* Ptr) { return Ptr->bInTick; }
	DOTNET_EXPORT void E_PROP_UWorld_bInTick_SET(UWorld* Ptr, uint8 Value) { Ptr->bInTick = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsBuilt_GET(UWorld* Ptr) { return Ptr->bIsBuilt; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsBuilt_SET(UWorld* Ptr, uint8 Value) { Ptr->bIsBuilt = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsCameraMoveableWhenPaused_GET(UWorld* Ptr) { return Ptr->bIsCameraMoveableWhenPaused; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsCameraMoveableWhenPaused_SET(UWorld* Ptr, uint8 Value) { Ptr->bIsCameraMoveableWhenPaused = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsDefaultLevel_GET(UWorld* Ptr) { return Ptr->bIsDefaultLevel; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsDefaultLevel_SET(UWorld* Ptr, uint8 Value) { Ptr->bIsDefaultLevel = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsLevelStreamingFrozen_GET(UWorld* Ptr) { return Ptr->bIsLevelStreamingFrozen; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsLevelStreamingFrozen_SET(UWorld* Ptr, uint8 Value) { Ptr->bIsLevelStreamingFrozen = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsRunningConstructionScript_GET(UWorld* Ptr) { return Ptr->bIsRunningConstructionScript; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsRunningConstructionScript_SET(UWorld* Ptr, uint8 Value) { Ptr->bIsRunningConstructionScript = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsTearingDown_GET(UWorld* Ptr) { return Ptr->bIsTearingDown; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsTearingDown_SET(UWorld* Ptr, uint8 Value) { Ptr->bIsTearingDown = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsWorldInitialized_GET(UWorld* Ptr) { return Ptr->bIsWorldInitialized; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsWorldInitialized_SET(UWorld* Ptr, uint8 Value) { Ptr->bIsWorldInitialized = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bKismetScriptError_GET(UWorld* Ptr) { return Ptr->bKismetScriptError; }
	DOTNET_EXPORT void E_PROP_UWorld_bKismetScriptError_SET(UWorld* Ptr, uint8 Value) { Ptr->bKismetScriptError = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bMatchStarted_GET(UWorld* Ptr) { return Ptr->bMatchStarted; }
	DOTNET_EXPORT void E_PROP_UWorld_bMatchStarted_SET(UWorld* Ptr, uint8 Value) { Ptr->bMatchStarted = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bPlayersOnly_GET(UWorld* Ptr) { return Ptr->bPlayersOnly; }
	DOTNET_EXPORT void E_PROP_UWorld_bPlayersOnly_SET(UWorld* Ptr, uint8 Value) { Ptr->bPlayersOnly = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bPlayersOnlyPending_GET(UWorld* Ptr) { return Ptr->bPlayersOnlyPending; }
	DOTNET_EXPORT void E_PROP_UWorld_bPlayersOnlyPending_SET(UWorld* Ptr, uint8 Value) { Ptr->bPlayersOnlyPending = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bPostTickComponentUpdate_GET(UWorld* Ptr) { return Ptr->bPostTickComponentUpdate; }
	DOTNET_EXPORT void E_PROP_UWorld_bPostTickComponentUpdate_SET(UWorld* Ptr, uint8 Value) { Ptr->bPostTickComponentUpdate = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bRequestedBlockOnAsyncLoading_GET(UWorld* Ptr) { return Ptr->bRequestedBlockOnAsyncLoading; }
	DOTNET_EXPORT void E_PROP_UWorld_bRequestedBlockOnAsyncLoading_SET(UWorld* Ptr, uint8 Value) { Ptr->bRequestedBlockOnAsyncLoading = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bShouldSimulatePhysics_GET(UWorld* Ptr) { return Ptr->bShouldSimulatePhysics; }
	DOTNET_EXPORT void E_PROP_UWorld_bShouldSimulatePhysics_SET(UWorld* Ptr, uint8 Value) { Ptr->bShouldSimulatePhysics = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bStartup_GET(UWorld* Ptr) { return Ptr->bStartup; }
	DOTNET_EXPORT void E_PROP_UWorld_bStartup_SET(UWorld* Ptr, uint8 Value) { Ptr->bStartup = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bTickNewlySpawned_GET(UWorld* Ptr) { return Ptr->bTickNewlySpawned; }
	DOTNET_EXPORT void E_PROP_UWorld_bTickNewlySpawned_SET(UWorld* Ptr, uint8 Value) { Ptr->bTickNewlySpawned = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bTriggerPostLoadMap_GET(UWorld* Ptr) { return Ptr->bTriggerPostLoadMap; }
	DOTNET_EXPORT void E_PROP_UWorld_bTriggerPostLoadMap_SET(UWorld* Ptr, uint8 Value) { Ptr->bTriggerPostLoadMap = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bWorldWasLoadedThisTick_GET(UWorld* Ptr) { return Ptr->bWorldWasLoadedThisTick; }
	DOTNET_EXPORT void E_PROP_UWorld_bWorldWasLoadedThisTick_SET(UWorld* Ptr, uint8 Value) { Ptr->bWorldWasLoadedThisTick = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_CommittedPersistentLevelName_GET(UWorld* Ptr) { return ConvertToManage_StringWrapper(Ptr->CommittedPersistentLevelName); }
	DOTNET_EXPORT void E_PROP_UWorld_CommittedPersistentLevelName_SET(UWorld* Ptr, char* Value) { Ptr->CommittedPersistentLevelName = ConvertFromManage_FName(Value); }
	
	
	DOTNET_EXPORT INT_PTR E_NewObject_UWorld(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<UWorld>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}